Front-end: New landing page design

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -1,3 +1,5 @@
 {
-  "title": "Argo for Magister 6"
+  "home": "Download now!",
+  "title": "Argo for Magister 6",
+  "description": "Argo is a modern client for Magister 6 that is available for Android and IOS. Not only does it give you a better overview of your school schedule, but it can also calculate your average grades or change your app's color. Download it now!"
 }
