Front-end: Added footer

--- a/public/locales/nl/common.json
+++ b/public/locales/nl/common.json
@@ -1,5 +1,6 @@
 {
 	"home": "Home",
 	"title": "Argo voor Magister",
-	"description": "Argo is een moderne client voor Magister 6 die beschikbaar is voor Android en IOS. Het geeft niet alleen een beter overzicht van je rooster, maar kan ook je gemiddeldes berekenen of de app kleuren veranderen. Download hem nu!"
+	"description": "Argo is een moderne client voor Magister 6 die beschikbaar is voor Android en IOS. Het geeft niet alleen een beter overzicht van je rooster, maar kan ook je gemiddeldes berekenen of de app kleuren veranderen. Download hem nu!",
+	"by": "Door"
 }
