--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -1,5 +1,6 @@
 {
 	"home": "Home",
 	"title": "Argo for Magister",
-	"description": "Argo is a modern client for Magister 6 that is available for Android and IOS. Not only does it give you a better overview of your school schedule, but it can also calculate your average grades or change your app's color. Download it now!"
+	"description": "Argo is a modern client for Magister 6 that is available for Android and IOS. Not only does it give you a better overview of your school schedule, but it can also calculate your average grades or change your app's color. Download it now!",
+	"by": "By"
 }
