Back-end: Added cache to commit retrieval.

--- a/public/locales/nl/downloads.json
+++ b/public/locales/nl/downloads.json
@@ -1,4 +1,6 @@
 {
 	"title": "Downloads",
-	"github": "Bekijk op Github"
+	"github": "Bekijk op Github",
+	"previous": "Vorige",
+	"next": "Volgende"
 }
