Improved view for pending and f ailed builds Added 404 page

--- a/public/locales/en/downloads.json
+++ b/public/locales/en/downloads.json
@@ -2,5 +2,7 @@
 	"title": "Downloads",
 	"github": "View on Github",
 	"previous": "Previous",
-	"next": "Next"
+	"next": "Next",
+	"building": "Building apk...",
+	"failed": "Failed to build apk"
 }
