--- a/public/locales/nl/downloads.json
+++ b/public/locales/nl/downloads.json
@@ -2,5 +2,7 @@
 	"title": "Downloads",
 	"github": "Bekijk op Github",
 	"previous": "Vorige",
-	"next": "Volgende"
+	"next": "Volgende",
+	"building": "Apk bouwen...",
+	"failed": "Apk bouwen mislukt"
 }
